deleted single frame source ingestion, deleted unused fps parameter in rtsp and webcam ingestion. now fps configurable only for file ingestion and output profiles. ui in realtime now

--- a/configs/dual.yaml
+++ b/configs/dual.yaml
@@ -7,9 +7,8 @@ streams:
     type: "rtsp"
 
     rtsp:
-      url: "rtsp://rtspstream:iC_SMRxQh3s8d66xv1LBW@zephyr.rtsp.stream/movie"
+      url: "rtsp://rtspstream:iC_SMRxQh3s8d66xv1LBW@zephyr.rtsp.stream/pattern"
       tcp: true
-      fps: 25
       latency_ms: 1000
 
     outputs:
@@ -20,8 +19,8 @@ streams:
           fps: 10
           format: "BGR"
         ui:
-          width: 1280
-          height: 720
+          width: 960
+          height: 540
           fps: 10
           jpeg_quality: 75
 
