intermediate commit, will be continued

--- a/configs/rtsp.yaml
+++ b/configs/rtsp.yaml
@@ -7,9 +7,9 @@ streams:
     type: "rtsp"
 
     rtsp:
-      url: "rtsp://rtspstream:iC_SMRxQh3s8d66xv1LBW@zephyr.rtsp.stream/pattern"
+      url: "rtsp://rtspstream:iC_SMRxQh3s8d66xv1LBW@zephyr.rtsp.stream/movie"
       tcp: true
-      fps: 30
+      fps: 25
       latency_ms: 1000
 
     output:
