--- a/configs/webcam.yaml
+++ b/configs/webcam.yaml
@@ -13,12 +13,21 @@ streams:
       fps: 15
       mjpg: true
 
-    output:
-      width: 1280
-      height: 720
-      keep_aspect: true
-      interp: "linear"
-      jpeg_quality: 75
+    outputs:
+      fps: 15
+      profiles:
+        inference:
+          width: 640
+          height: 640
+          keep_aspect: true
+          interp: "linear"
+          format: "BGR"
+        ui:
+          width: 1280
+          height: 720
+          keep_aspect: true
+          interp: "linear"
+          jpeg_quality: 75
 
     replicate:
       count: 1
