--- a/configs/file.yaml
+++ b/configs/file.yaml
@@ -10,21 +10,12 @@ streams:
       path: "../../../assets/test.mp4"
       fps: 10
 
-    outputs:
-      fps: 10
-      profiles:
-        inference:
-          width: 640
-          height: 640
-          keep_aspect: true
-          interp: "linear"
-          format: "BGR"
-        ui:
-          width: 1280
-          height: 720
-          keep_aspect: true
-          interp: "linear"
-          jpeg_quality: 75
+    output:
+      width: 1280
+      height: 720
+      keep_aspect: true
+      interp: "linear"
+      jpeg_quality: 75
 
     replicate:
       count: 2
